--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 				<h2>Чем мы занимаемся</h2>
 				<ul>
 					<li>
-						<img src="./images/work1.jpg" alt="Верстка" width="370" height="294" />
+						<img src="./images/index/work1.jpg" alt="Верстка" width="370" height="294" />
 					</li>
 					<li>
-						<img src="./images/work2.jpg" alt="Дизайн" width="370" height="294" />
+						<img src="./images/index/work2.jpg" alt="Дизайн" width="370" height="294" />
 					</li>
 					<li>
-						<img src="./images/work3.jpg" alt="Внешнее оформление" width="370" height="294" />
+						<img src="./images/index/work3.jpg" alt="Внешнее оформление" width="370" height="294" />
 					</li>
 				</ul>
 			</section>
@@ -75,22 +75,22 @@
 				<h2>Наша команда</h2>
 				<ul>
 					<li>
-						<img src="./images/face1.jpg" alt="На фото Игорь Демьяненко" height="260" width="270" />
+						<img src="./images/index/face1.jpg" alt="На фото Игорь Демьяненко" height="260" width="270" />
 						<h3>Игорь Демьяненко</h3>
 						<p lang="en">Product Designer</p>
 					</li>
 					<li>
-						<img src="./images/face2.jpg" alt="На фото Ольга Репина" height="260" width="270" />
+						<img src="./images/index/face2.jpg" alt="На фото Ольга Репина" height="260" width="270" />
 						<h3>Ольга Репина</h3>
 						<p lang="en">Frontend Developer</p>
 					</li>
 					<li>
-						<img src="./images/face3.jpg" alt="На фото Николай Тарасов" height="260" width="270" />
+						<img src="./images/index/face3.jpg" alt="На фото Николай Тарасов" height="260" width="270" />
 						<h3>Николай Тарасов</h3>
 						<p lang="en">Marketing</p>
 					</li>
 					<li>
-						<img src="./images/face4.jpg" alt="На фото Михаил Ермаков" height="260" width="270" />
+						<img src="./images/index/face4.jpg" alt="На фото Михаил Ермаков" height="260" width="270" />
 						<h3>Михаил Ермаков</h3>
 						<p lang="en">UI Designer</p>
 					</li>
