--- a/index.html
+++ b/index.html
@@ -16,59 +16,63 @@
 	<body>
 		<!-- header section -->
 		<header>
-			<a href="index.html" lang="en">
+			<a class="logo link" href="index.html" lang="en">
 				Web
-				<span>Studio</span>
+				<span class="logo-text">Studio</span>
 			</a>
 			<nav>
-				<ul>
-					<li><a href="./index.html">Студия</a></li>
-					<li><a href="./portfolio.html">Портфолио</a></li>
-					<li><a href="">Контакты</a></li>
+				<ul class="nav-list list">
+					<li><a class="nav-link link current" href="./index.html">Студия</a></li>
+					<li><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+					<li><a class="nav-link link" href="">Контакты</a></li>
 				</ul>
 			</nav>
-			<ul>
+			<ul class="contacts-list list">
 				<li>
-					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="link header-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a href="tel:+380961111111">+38 096 111 11 11</a>
+					<a class="link header-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
 		<!-- main section -->
 		<main class="maim">
 			<!-- hero section -->
-			<section>
-				<h1>Эффективные решения для вашего бизнеса</h1>
-				<button type="button">Заказать услугу</button>
+			<section class="hero">
+				<h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+				<button class="hero-btn" type="button">Заказать услугу</button>
 			</section>
-			<!-- addout section -->
-			<section>
+			<!-- abbout section -->
+			<section class="abbout">
 				<h2 hidden>Особености</h2>
-				<ul>
+				<ul class="list">
 					<li>
-						<h3>Внимание к деталям</h3>
-						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+						<h3 class="abbout-title">Внимание к деталям</h3>
+						<p class="abbout-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 					</li>
 					<li>
-						<h3>Пунктуальность</h3>
-						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+						<h3 class="abbout-title">Пунктуальность</h3>
+						<p class="abbout-text">
+							Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+						</p>
 					</li>
 					<li>
-						<h3>Планирование</h3>
-						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+						<h3 class="abbout-title">Планирование</h3>
+						<p class="abbout-text">
+							Равным образом консультация с широким активом в значительной степени обуславливает.
+						</p>
 					</li>
 					<li>
-						<h3>Современные технологии</h3>
-						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+						<h3 class="abbout-title">Современные технологии</h3>
+						<p class="abbout-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 					</li>
 				</ul>
 			</section>
 			<!--work section  -->
-			<section>
-				<h2>Чем мы занимаемся</h2>
-				<ul>
+			<section class="work">
+				<h2 class="work-title title">Чем мы занимаемся</h2>
+				<ul class="list">
 					<li>
 						<img src="./images/index/work1.jpg" alt="Верстка" width="370" height="294" />
 					</li>
@@ -81,50 +85,55 @@
 				</ul>
 			</section>
 			<!-- team section -->
-			<section>
-				<h2>Наша команда</h2>
-				<ul>
+			<section class="team">
+				<h2 class="team-title title">Наша команда</h2>
+				<ul class="list">
 					<li>
 						<img src="./images/index/face1.jpg" alt="На фото Игорь Демьяненко" height="260" width="270" />
-						<h3>Игорь Демьяненко</h3>
-						<p lang="en">Product Designer</p>
+						<h3 class="name-title">Игорь Демьяненко</h3>
+						<p class="name-text" lang="en">Product Designer</p>
 					</li>
 					<li>
 						<img src="./images/index/face2.jpg" alt="На фото Ольга Репина" height="260" width="270" />
-						<h3>Ольга Репина</h3>
-						<p lang="en">Frontend Developer</p>
+						<h3 class="name-title">Ольга Репина</h3>
+						<p class="name-text" lang="en">Frontend Developer</p>
 					</li>
 					<li>
 						<img src="./images/index/face3.jpg" alt="На фото Николай Тарасов" height="260" width="270" />
-						<h3>Николай Тарасов</h3>
-						<p lang="en">Marketing</p>
+						<h3 class="name-title">Николай Тарасов</h3>
+						<p class="name-text" lang="en">Marketing</p>
 					</li>
 					<li>
 						<img src="./images/index/face4.jpg" alt="На фото Михаил Ермаков" height="260" width="270" />
-						<h3>Михаил Ермаков</h3>
-						<p lang="en">UI Designer</p>
+						<h3 class="name-title">Михаил Ермаков</h3>
+						<p class="name-text" lang="en">UI Designer</p>
 					</li>
 				</ul>
 			</section>
 		</main>
 		<!-- footer section -->
-		<footer>
-			<a href="index.html" lang="en">
+		<footer class="footer">
+			<a class="logo link" href="index.html" lang="en">
 				Web
-				<span>Studio</span>
+				<span class="logo-text-footer">Studio</span>
 			</a>
-			<address>
-				<ul>
+			<address class="address">
+				<ul class="list">
 					<li>
-						<a href="https://goo.gl/maps/qAN8Z4eKV2x6crum7" target="_blank" rel="noopener noreferrer">
+						<a
+							class="link map-link"
+							href="https://goo.gl/maps/qAN8Z4eKV2x6crum7"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
 							г. Киев, пр-т Леси Украинки, 26
 						</a>
 					</li>
 					<li>
-						<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+						<a class="link contacts-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
 					</li>
 					<li>
-						<a href="tel:+380961111111">+38 096 111 11 11</a>
+						<a class="link contacts-footer" href="tel:+380961111111">+38 096 111 11 11</a>
 					</li>
 				</ul>
 			</address>
