--- a/portfolio.html
+++ b/portfolio.html
@@ -16,23 +16,23 @@
 	<body>
 		<!-- header section -->
 		<header>
-			<a href="index.html" lang="en">
+			<a class="logo link" href="index.html" lang="en">
 				Web
-				<span>Studio</span>
+				<span class="logo-text">Studio</span>
 			</a>
 			<nav>
-				<ul>
-					<li><a href="./index.html">Студия</a></li>
-					<li><a href="./portfolio.html">Портфолио</a></li>
-					<li><a href="">Контакты</a></li>
+				<ul class="nav-list list">
+					<li><a class="nav-link link" href="./index.html">Студия</a></li>
+					<li><a class="nav-link link current" href="./portfolio.html">Портфолио</a></li>
+					<li><a class="nav-link link" href="">Контакты</a></li>
 				</ul>
 			</nav>
-			<ul>
+			<ul class="contacts-list list">
 				<li>
-					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="link header-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a href="tel:+380961111111">+38 096 111 11 11</a>
+					<a class="link header-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
@@ -41,133 +41,103 @@
 			<section class="section-portfolio">
 				<h1 class="portfolio-title" hidden>Портфолио</h1>
 				<ul class="list filter">
-					<li><button class="filter-btn">Все</button></li>
-					<li><button class="filter-btn">Веб-сайты</button></li>
-					<li><button class="filter-btn">Приложения</button></li>
-					<li><button class="filter-btn">Дизайн</button></li>
-					<li><button class="filter-btn">Маркетинг</button></li>
+					<li><button type="button" class="filter-btn all-btn">Все</button></li>
+					<li><button type="button" class="filter-btn web-btn">Веб-сайты</button></li>
+					<li><button type="button" class="filter-btn app-btn">Приложения</button></li>
+					<li><button type="button" class="filter-btn decing-btn">Дизайн</button></li>
+					<li><button type="button" class="filter-btn marketing-btn">Маркетинг</button></li>
 				</ul>
+				<!-- portfolio list -->
 				<ul class="list">
 					<li>
-						<a
-							clas="portfolio-link link
-                        "
-							href=""
-						>
-							<img src="./images/portfolio/img1.jpg" alt="Сайт Технокряк" winth="370" height="294" />
-							<h2 clas="portfolio-title">Технокряк</h2>
-							<p clas="portfolio-text">Веб-сайт</p>
+						<a class="portfolio-link link" href="">
+							<img src="./images/portfolio/img1.jpg" alt="Сайт Технокряк" width="370" height="294" />
+							<h2 class="portfolio-title">Технокряк</h2>
+							<p class="portfolio-text">Веб-сайт</p>
 						</a>
 					</li>
 					<li>
-						<a
-							clas="portfolio-link link
-                        "
-							href=""
-						>
-							<img src="./images/portfolio/img2.jpg" alt="Дизайн постера" winth="370" height="294" />
-							<h2 clas="portfolio-title">Постер New Orlean vs Golden Star</h2>
-							<p clas="portfolio-text">Дизайн</p>
+						<a class="portfolio-link link" href="">
+							<img src="./images/portfolio/img2.jpg" alt="Дизайн постера" width="370" height="294" />
+							<h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+							<p class="portfolio-text">Дизайн</p>
 						</a>
 					</li>
 					<li>
-						<a
-							clas="portfolio-link link
-                        "
-							href=""
-						>
-							<img src="./images/portfolio/img3.jpg" alt="Приложение ресторана" winth="370" height="294" />
-							<h2 clas="portfolio-title">Ресторан Seafood</h2>
-							<p clas="portfolio-text">Приложение</p>
+						<a class="portfolio-link link" href="">
+							<img src="./images/portfolio/img3.jpg" alt="Приложение ресторана" width="370" height="294" />
+							<h2 class="portfolio-title">Ресторан Seafood</h2>
+							<p class="portfolio-text">Приложение</p>
 						</a>
 					</li>
 					<li>
-						<a
-							clas="portfolio-link link
-                        "
-							href=""
-						>
-							<img src="./images/portfolio/img4.jpg" alt="Маркетинг проекта" winth="370" height="294" />
-							<h2 clas="portfolio-title">Проект Prime</h2>
-							<p clas="portfolio-text">Маркетинг</p>
+						<a class="portfolio-link link" href="">
+							<img src="./images/portfolio/img4.jpg" alt="Маркетинг проекта" width="370" height="294" />
+							<h2 class="portfolio-title">Проект Prime</h2>
+							<p class="portfolio-text">Маркетинг</p>
 						</a>
 					</li>
 					<li>
-						<a
-							clas="portfolio-link link
-                        "
-							href=""
-						>
-							<img src="./images/portfolio/img5.jpg" alt="Дизайн приложения" winth="370" height="294" />
-							<h2 clas="portfolio-title">Проект Boxes</h2>
-							<p clas="portfolio-text">Приложение</p>
+						<a class="portfolio-link link" href="">
+							<img src="./images/portfolio/img5.jpg" alt="Дизайн приложения" width="370" height="294" />
+							<h2 class="portfolio-title">Проект Boxes</h2>
+							<p class="portfolio-text">Приложение</p>
 						</a>
 					</li>
 					<li>
-						<a
-							clas="portfolio-link link
-                        "
-							href=""
-						>
-							<img src="./images/portfolio/img6.jpg" alt="Сайт Inspiration has no Borders" winth="370" height="294" />
-							<h2 clas="portfolio-title">Inspiration has no Borders</h2>
-							<p clas="portfolio-text">Веб-сайт</p>
+						<a class="portfolio-link link" href="">
+							<img src="./images/portfolio/img6.jpg" alt="Сайт Inspiration has no Borders" width="370" height="294" />
+							<h2 class="portfolio-title">Inspiration has no Borders</h2>
+							<p class="portfolio-text">Веб-сайт</p>
 						</a>
 					</li>
 					<li>
-						<a
-							clas="portfolio-link link
-                        "
-							href=""
-						>
-							<img src="./images/portfolio/img7.jpg" alt="Дизайн издания" winth="370" height="294" />
-							<h2 clas="portfolio-title">Издание Limited Edition</h2>
-							<p clas="portfolio-text">Дизайн</p>
+						<a class="portfolio-link link" href="">
+							<img src="./images/portfolio/img7.jpg" alt="Дизайн издания" width="370" height="294" />
+							<h2 class="portfolio-title">Издание Limited Edition</h2>
+							<p class="portfolio-text">Дизайн</p>
 						</a>
 					</li>
 					<li>
-						<a
-							clas="portfolio-link link
-                        "
-							href=""
-						>
-							<img src="./images/portfolio/img8.jpg" alt="Маркетинг проекта" winth="370" height="294" />
-							<h2 clas="portfolio-title">Проект LAB</h2>
-							<p clas="portfolio-text">Маркетинг</p>
+						<a class="portfolio-link link" href="">
+							<img src="./images/portfolio/img8.jpg" alt="Маркетинг проекта" width="370" height="294" />
+							<h2 class="portfolio-title">Проект LAB</h2>
+							<p class="portfolio-text">Маркетинг</p>
 						</a>
 					</li>
 					<li>
-						<a
-							clas="portfolio-link link
-                        "
-							href=""
-						>
-							<img src="./images/portfolio/img9.jpg" alt="Приложение" winth="370" height="294" />
-							<h2 clas="portfolio-title">Growing Business</h2>
-							<p clas="portfolio-text">Приложение</p>
+						<a class="portfolio-link link" href="">
+							<img src="./images/portfolio/img9.jpg" alt="Приложение" width="370" height="294" />
+							<h2 class="portfolio-title">Growing Business</h2>
+							<p class="portfolio-text">Приложение</p>
 						</a>
 					</li>
 				</ul>
 			</section>
 		</main>
 		<!-- footer section -->
-		<footer>
-			<a href="index.html" lang="en">
+		<footer class="footer">
+			<a class="logo link" href="index.html" lang="en">
 				Web
-				<span>Studio</span>
+				<span class="logo-text-footer">Studio</span>
 			</a>
-			<address>
-				<ul>
+			<address class="address">
+				<ul class="list">
 					<li>
-						<a href="https://goo.gl/maps/qAN8Z4eKV2x6crum7" target="_blank" rel="noopener noreferrer">
+						<a
+							class="link map-link"
+							href="https://goo.gl/maps/qAN8Z4eKV2x6crum7"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
 							г. Киев, пр-т Леси Украинки, 26
 						</a>
 					</li>
 					<li>
-						<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+						<a class="link contacts-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
 					</li>
 					<li>
-						<a href="tel:+380961111111">+38 096 111 11 11</a>
+						<a class="link contacts-footer" href="tel:+380961111111">+38 096 111 11 11</a>
 					</li>
 				</ul>
 			</address>
