--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 			<section class="section-portfolio">
 				<h1 class="portfolio-title" hidden>Портфолио</h1>
 				<ul class="list filter">
-					<li><button type="button" class="filter-btn all-btn">Все</button></li>
+					<li><button type="button" class="filter-btn all-btn current-btn">Все</button></li>
 					<li><button type="button" class="filter-btn web-btn">Веб-сайты</button></li>
 					<li><button type="button" class="filter-btn app-btn">Приложения</button></li>
 					<li><button type="button" class="filter-btn decing-btn">Дизайн</button></li>
